# assignment_3_deidda_federico

./: readme.md
EKF/: plotter.py  res.txt
EKF/src/: FusionEKF.cpp  FusionEKF.h  kalman_filter.cpp  main.cpp  tools.cpp
KF_LiDAR/: CMakeLists.txt  ground_truth.txt  measurements.txt  res.txt
KF_LiDAR/src/: kf.cpp  kf.h  main.cpp  measurement_package.h  tracking.cpp  tracking.h
